# wafer

./: .gitignore  CLAUDE.md  LICENSE  README.md  llms.txt  pyproject.toml  todo-realtorsolve.md  todo-wellfoundsolve.md
.github/workflows/: ci.yml  publish.yml
docs/: baxia.md  geetest.md  kasada.md  press-and-hold.md  ref-baxia.md  ref-datadome.md  ref-geetest.md  ref-headless.md  ref-imperva.md  ref-kasada.md  ref-models.md  ref-perimeterx.md  ref-recaptcha.md  ref-rnet.md  ref-sec-fetch.md  ref-wreq.md  site-list.md  todo-futurellms.md
tests/: conftest.py  demo_baxia_solve.py  demo_cv_solve.py  live_baxia.py  live_chewy_kasada.py  live_drag_sites.py  live_geetest_demo.py  live_opera_mini.py  px_captcha_local.html  px_dump_frames.py  px_mock_server.py  smoke_test.py  test_add_cookie.py  test_async_solver.py  test_attempt_timeout.py  test_browser.py  test_bulk.py  test_challenge.py  test_cookies.py  test_cv.py  test_dart.py  test_fingerprint.py  test_headers.py  test_kasada.py  test_max_response_size.py  test_native_tls.py  test_opera_mini.py  test_psl.py  test_px_captcha_local.py  test_px_live_wayfair.py  test_ratelimit.py  test_recaptcha_v3.py  test_resolve.py  test_response.py  test_retry.py  test_session.py  test_solver_ownership.py  test_solvers.py  test_transport_cap.py
training/: collect.py
wafer/: __init__.py  _async.py  _base.py  _challenge.py  _cookies.py  _dart.py  _errors.py  _fingerprint.py  _kasada.py  _native_tls.py  _opera_mini.py  _profiles.py  _psl.py  _ratelimit.py  _recaptcha_v3.py  _response.py  _retry.py  _safari.py  _solvers.py  _sync.py
(+226 files in other folders)
